<resources>
    <string name="app_name">Jober</string>
    <string name="company_string">Company</string>
    <string name="jober_string">Jober</string>
    <string name="worker_string">Worker</string>
    <string name="recover_string">Recover</string>
    <string name="email_string">E-mail</string>
    <string name="register_string">Register</string>
    <string name="no_account_string">Don\'t have an account?</string>
    <string name="forgot_password_string">Forgot password?</string>
    <string name="password_string">Password</string>
    <string name="sign_in_string">Sign In</string>
    <string name="sign_up_string">Sign Up</string>
    <string name="already_have_an_account_string">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile_string">My profile</string>
    <string name="my_applications_string">My applications</string>
    <string name="profile_pic_string">profile_pic</string>
    <string name="logout_string">Logout</string>
    <string name="name_string">name</string>
    <string name="surname_string">surname</string>
    <string name="age_string">age</string>
    <string name="country_string">country</string>
    <string name="city_string">city</string>
    <string name="main_profession_string">main profession</string>
    <string name="bio_string">bio</string>
    <string name="skills_string">skills</string>
    <string name="languages_string">languages</string>
    <string name="educational_experience_string">educational experience</string>
    <string name="change_photo_string">change photo</string>
    <string name="save_string">save</string>
    <string name="worker_profile_name">Name:</string>
    <string name="worker_profile_surname">Surname:</string>
    <string name="worker_profile_age">Age:</string>
    <string name="worker_profile_country">Country:</string>
    <string name="worker_profile_city">City:</string>
    <string name="worker_profile_main_profession">Main profession:</string>
    <string name="worker_profile_bio">Bio:</string>
    <string name="worker_profile_skills">Skills:</string>
    <string name="worker_profile_languages">Languages:</string>
    <string name="worker_profile_edu_exp">Educational experiences:</string>
    <string name="worker_profile_contact">Contact</string>
    <string name="company_profile_company">Company:</string>
    <string name="company_profile_sector">Sector:</string>
    <string name="company_profile_country">Country:</string>
    <string name="company_profile_city">City:</string>
    <string name="company_profile_description">Description:</string>
    <string name="company_options_company_profile">company profile</string>
    <string name="company_options_new_offer">new offer</string>
    <string name="company_profile_company_offers">company offers</string>
    <string name="offer_edit_ed_exp">Educational experiences required</string>
    <string name="offer_description_company">Company:</string>
    <string name="offer_description_sector">Sector:</string>
    <string name="offer_description_position">Position:</string>
    <string name="offer_description_location">Location:</string>
    <string name="offer_description_job_description">Job description:</string>
    <string name="offer_description_skills_required">Skills required:</string>
    <string name="offer_description_languages_required">Languages required:</string>
    <string name="offer_description_educational_experiences_required">Educational experiences required:</string>
    <string name="login_forget_your_password">Forget your password?</string>
    <string name="login_recover">Recover</string>
    <string name="event_details_who">Who:</string>
    <string name="event_details_position">Position:</string>
    <string name="event_details_when">When:</string>
    <string name="event_details_cancel_event">Cancel event</string>
</resources>