<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBaseline_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/jober_string"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:background="@drawable/custom_input_field"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email_string"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:drawablePadding="8dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo" />

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:clickable="true"
        android:onClick="goToRegister"
        android:text="@string/register_string"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/no_account_string"
        app:layout_constraintEnd_toStartOf="@+id/tv_signin"
        app:layout_constraintHorizontal_bias="0.374"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/custom_input_field"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:padding="12dp"
        android:drawablePadding="8dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#000000"
        android:text="@string/sign_in_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

</androidx.constraintlayout.widget.ConstraintLayout>